# wifi-fund

./: .gitignore  README.md  wifi-fund.yml
.github/workflows/: build_all.yml
l2/l2_e2/: prj.conf  sample.yaml  sysbuild.conf
l2/l2_e2_sol/: prj.conf  sample.yaml  sysbuild.conf
l2/l2_e2_sol/src/: main.c
l2/l2_e3/: Kconfig.sysbuild  prj.conf  sample.yaml
l2/l2_e3_sol/: CMakeLists.txt  Kconfig.sysbuild  prj.conf  sample.yaml
l3/l3_e1/: prj.conf  sample.yaml
l3/l3_e1_sol/: prj.conf  sample.yaml
l3/l3_e2/: prj.conf  sample.yaml
l3/l3_e2_sol/: prj.conf  sample.yaml
l4/l4_e1/: Kconfig  prj.conf  sample.yaml
l4/l4_e1_sol/: prj.conf  sample.yaml
l4/l4_e2/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml
l4/l4_e2_sol/: prj.conf  sample.yaml
l5/l5_e1/: prj.conf  sample.yaml
l5/l5_e1_sol/: Kconfig  prj.conf  sample.yaml
l5/l5_e2/: prj.conf  sample.yaml
l5/l5_e2_sol/: prj.conf  sample.yaml
l5/l5_e3/: prj.conf  sample.yaml
l5/l5_e3_sol/: Kconfig  prj.conf  sample.yaml
l6/l6_e1/: prj.conf  sample.yaml
l6/l6_e1_sol/: prj.conf  sample.yaml
l6/l6_e2/: prj.conf  sample.yaml
l6/l6_e2_sol/: prj.conf  sample.yaml
lesson1/wififund_less1_exer1/: wifi_provisioning_nrf5340_nrf5340_cpuapp_2023_12.hex  wifi_provisioning_nrf5340dk_nrf5340_cpuapp_nrf7002ek_2023_12.hex  wifi_provisioning_nrf7002dk_nrf5340_2023_12.hex  wifi_provisioning_nrf7002dk_nrf5340_cpuapp_2023_12.hex
omar_less4_exer1/: Kconfig  README.md  prj.conf  sample.yaml
v3.0.0/l5/l5_e2_sol/: CMakeLists.txt  Kconfig  prj.conf
v3.0.0/l5/l5_e2_sol/boards/: nrf5340dk_nrf5340_cpuapp_ns.conf
(+304 files in other folders)
